Mon Dec 20 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSavePanel.m: Use symbolic constants for resize mask.
	* Source/NSBrowser.m: size the matrix to fit when it is created.

Sat Dec 18 16:05:46 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/AppKit/NSSplitView.h: Prefixed ivars with underscores;
 	changed widths' type from int to float; removed method
 	-setDividerThickNess:.  
	* Source/NSSplitView.m: Updated for ivar name change; access ivars
 	directly.  ([-dividerThickness]): Return 6, our default
 	dividerThickness.  ([-setDividerThickness:]): Removed method.
  	Subclasses need to ovverride -dividerThickness to do this (or else
 	use the GNUstep extension -setDimpleImage:resetDividerThickness:).
  	([-initWithFrame:]): invoke dividerThickness to set the ivar
 	_dividerWidth, used everywhere else when needed.  Changed things
 	so that overriding dividerThickness should actually work;
 	untested.  ([-initWithCoder:]), ([-encodeWithCoder:]): Fixed.
  	Tempor. commented out lines about encoding/decoding of dimple
 	image (which is anyway a GNUstep extension) till encoding/decoding
 	of images is implemented.

Sat Dec 18  5:38:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: ([-initWithCoder:]) small optimisation and
	consistency check when decoding and adding subviews.

Fri Dec 17 23:44:53 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/AppKit/NSBox.h: Prefixed ivars with underscores.
	* Source/NSBox.m: Updated for ivar name change.
	* Source/NSBox.m ([-initWithCoder:]): Set the first subview as the
 	content view; make sure that _title_rect and _border_rect are
 	automatically computed on decoding.  ([-encodeWithCoder:]): Do not
 	encode the content view, which is already encoded by NSView; do
 	not encode title_rect and border_rect.  ([-drawRect:]): Tiny
 	semplification.  ([-sizeToFit]): Access directly super_view ivar.
  	([-setFrameFromContentFrame:]): idem.